Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18563

Shutdown and logout dialog closes themself

    XMLWordPrintable

Details

    Description

      Log refers to the first build where I experienced it (but it's still present in current master): 
      ReactOS 0.4.15-x86-dev (Build 20221028-0.4.15-dev-5273-g36f7d1a) (Commit 36f7d1a953698157dddb723506453039b9dcf11d)
       
       
      Steps to reproduce it
      - Open start menu
      - Select "Shutdown" or "Logoff Administrator"
       
      Attached screenshot of working build and video + log of the failing build.

      Attachments

        Activity

          People

            katayama_hirofumi_mz Katayama Hirofumi MZ
            simonelombardo simonelombardo
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: