[KBSWITCH] Fix shutdown and logout dialog CORE-18563

20221028-0.4.15-dev-5273-g36f7d1a introduced bug.
Quick fix.
CORE-18563